fix(file): replace deprecated URL constructor with URI.create().toURL()
The URL(String) constructor is deprecated. Use URI.create().toURL()
to avoid deprecation warning that causes build failure with -Werror.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>